--- a/src/main/resources/com/example/motomami/Precios.fxml
+++ b/src/main/resources/com/example/motomami/Precios.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="650.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.motomami.Controllers.PreciosController">
+<AnchorPane prefHeight="650.0" prefWidth="450.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.motomami.Controllers.PreciosController">
    <children>
       <ImageView fitHeight="187.0" fitWidth="180.0" layoutX="128.0" pickOnBounds="true" preserveRatio="true">
          <image>
