--- a/src/main/resources/com/example/motomami/BuscarUsuario.fxml
+++ b/src/main/resources/com/example/motomami/BuscarUsuario.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="650.0" prefWidth="450.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.motomami.Controllers.BuscarUsuarioController">
    <children>
-      <TextField layoutX="27.0" layoutY="201.0" promptText="apellido" />
+      <TextField fx:id="idApellidos" layoutX="27.0" layoutY="201.0" promptText="apellido" />
       <ImageView fitHeight="187.0" fitWidth="180.0" layoutX="135.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../Images/2.png" />
@@ -22,14 +22,9 @@
          <font>
             <Font name="System Bold" size="24.0" />
          </font></Label>
-      <TextField layoutX="266.0" layoutY="201.0" promptText="DNI" />
-      <TableView layoutX="122.0" layoutY="268.0" prefHeight="200.0" prefWidth="200.0">
-        <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
-        </columns>
-      </TableView>
-      <Button fx:id="btnBuscar" layoutX="168.0" layoutY="491.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="BUSCAR" textFill="#9202ff" />
-      <Button fx:id="btnAtras" layoutX="21.0" layoutY="588.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="ATRAS" textFill="#9202ff" />
+      <TextField fx:id="idDni" layoutX="266.0" layoutY="201.0" promptText="DNI" />
+      <Button fx:id="btnBuscar" layoutX="168.0" layoutY="491.0" mnemonicParsing="false" onAction="#buscarUser" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="BUSCAR" textFill="#9202ff" />
+      <Button fx:id="btnAtras" layoutX="21.0" layoutY="588.0" mnemonicParsing="false" onAction="#irPaginaAtras" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="ATRAS" textFill="#9202ff" />
+      <TextArea fx:id="idArea" layoutX="126.0" layoutY="256.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
