--- a/src/main/resources/com/example/motomami/Estado.fxml
+++ b/src/main/resources/com/example/motomami/Estado.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="650.0" prefWidth="450.0" style="-fx-background-color: wihte;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.motomami.Controllers.EstadoController">
+<AnchorPane prefHeight="650.0" prefWidth="450.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.motomami.Controllers.EstadoController">
    <children>
       <ImageView fitHeight="187.0" fitWidth="180.0" layoutX="135.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -25,8 +25,8 @@
       <Label layoutX="220.0" layoutY="203.0" text="Id" textFill="#781175" />
       <TextField fx:id="id" layoutX="148.0" layoutY="229.0" />
       <Label layoutX="196.0" layoutY="267.0" text="Descripción" textFill="#781175" />
-      <TextArea fx:id="idDescrpcion" layoutX="125.0" layoutY="290.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="btnBuscar" layoutX="171.0" layoutY="514.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="BUSCAR" textFill="#9202ff" />
+      <TextArea fx:id="idDescripcion" layoutX="125.0" layoutY="290.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="btnBuscar" layoutX="171.0" layoutY="514.0" mnemonicParsing="false" onAction="#buscarEstado" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="BUSCAR" textFill="#9202ff" />
       <Button fx:id="btnAtras" layoutX="14.0" layoutY="602.0" mnemonicParsing="false" onAction="#irPaginaMenu" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="ATRÁS" textFill="#9202ff" />
    </children>
 </AnchorPane>
