--- a/src/main/resources/com/example/motomami/GenerarEstado.fxml
+++ b/src/main/resources/com/example/motomami/GenerarEstado.fxml
@@ -25,8 +25,8 @@
         <Label layoutX="220.0" layoutY="203.0" text="Id" textFill="#781175" />
         <TextField fx:id="id" layoutX="148.0" layoutY="229.0" />
         <Label layoutX="196.0" layoutY="267.0" text="Descripción" textFill="#781175" />
-        <TextArea fx:id="idDescrpcion" layoutX="125.0" layoutY="290.0" prefHeight="200.0" prefWidth="200.0" />
-        <Button fx:id="btnGenerar" layoutX="171.0" layoutY="514.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="GENERAR" textFill="#9202ff" />
-        <Button fx:id="btnAtras" layoutX="14.0" layoutY="602.0" mnemonicParsing="false" onAction="#irPaginaMenu" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="ATRÁS" textFill="#9202ff" />
+        <TextArea fx:id="idDescripcion" layoutX="125.0" layoutY="290.0" prefHeight="200.0" prefWidth="200.0" />
+        <Button fx:id="btnGenerar" layoutX="171.0" layoutY="514.0" mnemonicParsing="false" onAction="#generarEstado" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="GENERAR" textFill="#9202ff" />
+        <Button fx:id="btnAtras" layoutX="14.0" layoutY="602.0" mnemonicParsing="false" onAction="#irPaginaAtras" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="ATRÁS" textFill="#9202ff" />
     </children>
 </AnchorPane>
