--- a/src/main/resources/com/example/motomami/PaginaTrabajador.fxml
+++ b/src/main/resources/com/example/motomami/PaginaTrabajador.fxml
@@ -11,8 +11,8 @@
             <Image url="@../../../Images/2.png" />
          </image>
       </ImageView>
-      <Button fx:id="btnUser" layoutX="165.0" layoutY="169.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="120.0" style="-fx-background-radius: 20; -fx-background-color: pink;" text="BUSCAR USUARIO" textFill="#9202ff" />
-      <Button fx:id="btnEstado" layoutX="165.0" layoutY="419.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="120.0" style="-fx-background-radius: 20; -fx-background-color: pink;" text="GENERAR ESTADO" textFill="#9202ff" />
+      <Button fx:id="btnUser" layoutX="165.0" layoutY="169.0" mnemonicParsing="false" onAction="#irBuscarUsuario" prefHeight="80.0" prefWidth="120.0" style="-fx-background-radius: 20; -fx-background-color: pink;" text="BUSCAR USUARIO" textFill="#9202ff" />
+      <Button fx:id="btnEstado" layoutX="165.0" layoutY="419.0" mnemonicParsing="false" onAction="#irGenerarEstado" prefHeight="80.0" prefWidth="120.0" style="-fx-background-radius: 20; -fx-background-color: pink;" text="GENERAR ESTADO" textFill="#9202ff" />
       <ImageView fitHeight="50.0" fitWidth="43.0" layoutX="393.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../Images/images.png" />
