--- a/src/main/resources/com/example/motomami/PaginaUserNormal.fxml
+++ b/src/main/resources/com/example/motomami/PaginaUserNormal.fxml
@@ -13,7 +13,7 @@
          </font>
       </Label>
       <Button fx:id="btnPartes" layoutX="175.0" layoutY="69.0" mnemonicParsing="false" onAction="#irPantallaPartes" prefHeight="80.0" prefWidth="100.0" style="-fx-background-radius: 20; -fx-background-color: pink;" text="PARTES" textFill="#9202ff" />
-      <Button layoutX="175.0" layoutY="264.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="FACTURAS" textFill="#9202ff" />
+      <Button fx:id="btnFacturas" layoutX="175.0" layoutY="264.0" mnemonicParsing="false" onAction="#irPantallaFactura" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="FACTURAS" textFill="#9202ff" />
       <Button fx:id="btnEstado" layoutX="175.0" layoutY="453.0" mnemonicParsing="false" onAction="#irPantallaEstado" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="ESTADO" textFill="#9202ff" />
       <ImageView fitHeight="50.0" fitWidth="43.0" layoutX="393.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
          <image>
